--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=SpringBootSecurity
+## jsp 파일 처리하기 위한 prefix와 suffix를 추가 view 리졸버 return값 앞에 파일의 경로와 파일의 타입을 자동으로 추가해줌
+spring.mvc.view.prefix=/WEB-INF/views/
+spring.mvc.view.suffix=.jsp
+## 사용자가 지정한 username과 password
+spring.security.user.name=test
+spring.security.user.password=123456
+spring.security.user.roles=MANAGER
